<resources>
    <string name="app_name">Foxtrot Doorpanel Mobile App</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_worker">addWorker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="preference_file_key">mySharedPreferences</string>
    <string name="channel_name">FoxtrotNotifications</string>
    <string name="channel_description">Notifications for Foxtrot applications</string>

    <string name="backToMain">Back</string>
    <string name="eventTitle">Title</string>
    <string name="eventDesc">Description</string>
    <string name="eventAttendee">Attendee</string>
    <string name="eventStart">Start Time</string>
    <string name="eventEnd">End Time</string>
    <string name="eventLocation">Location</string>

    <string name="createEventTitle">Title:</string>
    <string name="createEventDesc">Description:</string>
    <string name="createEventAttendee">Attendee</string>
    <string name="createEventStart">Start At</string>
    <string name="createEventStartDate">Pick Date</string>
    <string name="createEventStartTime">Pick Time</string>

    <string name="createEventEnd">End At</string>
    <string name="createEventEndDate">Pick Date</string>
    <string name="createEventEndTime">Pick Time</string>

    <string name="createEventLocation">Location:</string>
    <string name="EventLength">Length of timeslot:</string>
    <string name="WeekDay">Weekday:</string>

    <string-array name="createTimeslot_array">
        <item>Single timeslot</item>
        <item>Automatic repeating timeslots</item>
    </string-array>

    <string-array name="TimeUnits_array">
        <!--<item>sec</item>-->
        <item>min</item>
        <item>h</item>
    </string-array>

    <string-array name="Weekday_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
